@@ -18,3 +18,15 @@ end
 Then(/^the value of button (\d+) should be "([^"]*)"$/) do |button_num, value|
   expect(@elements[button_num.to_i - 1].value).to eql value
 end
+
+When(/^I select the text fields with class "([^"]*)"$/) do |class_name|
+  @elements = @page.text_field_elements(:class => class_name)
+end
+
+Then(/^I should have (\d+) text fields$/) do |num_text_fields|
+  expect(@elements.size).to eql num_text_fields.to_i
+end
+
+Then(/^the value of text field (\d+) should be "([^"]*)"$/) do |text_field_num, value|
+  expect(@elements[text_field_num.to_i - 1].value).to eql value
+end
